# str-mcp-purview

./: .env.template  .funcignore  .gitignore  .mcp.json.example  Containerfile  LICENCE  README.md  ROADMAP.md  SECURITY.md  host.json  index.js  package-lock.json  package.json
functions/: local.settings.json.example  server.js
mcp/: README.md  pyproject.toml
mcp/.github/: copilot-instructions.md
mcp/src/simple_mcp_server/: server.py
src/: auth.js  dlp.js  format.js  graph.js  labels.js  powershell.js  pyproject.toml  server.js  server.py
src/str-mcp-purview/: server.py
src/str_mcp_purview/: __main__.py  server.py
str-mcp-purview/: .env.template  README.md  requirements.txt
str-mcp-purview/src/: server.py
test/: dlp.test.js  format.test.js  functions.test.js  graph.test.js  index.test.js  labels.test.js  powershell.test.js
