[project]
name = "str-mcp-purview"
version = "0.1.0"
description = "MCP Server for Microsoft Purview Integration - with an optional D&D flavour."
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "purview", "azure", "microsoft", "data", "catalog"]
dependencies = [
    "azure-core>=1.33.0",
    "azure-identity>=1.21.0",
    "azure-purview-account>=1.0.0b1",
    "azure-purview-administration>=1.0.0b1",
    "azure-purview-catalog>=1.0.0b4",
    "azure-purview-scanning>=1.0.0b2",
    "mcp>=1.6.0",
    "python-dotenv>=1.1.0",
]

[[project.authors]]
name = "Chris Lloyd-Jones"
email = "19361656+Sealjay@users.noreply.github.com"

[project.scripts]
str-mcp-purview = "str_mcp_purview:main"
